--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-countup": "^6.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^4.11.0",
     "swiper": "^11.0.3",
     "tailwind-merge": "^2.0.0",
