--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_PROTOCOL=http
-NEXT_PUBLIC_URL=http://caphetamgiao.local
-NEXT_PUBLIC_API_URL=http://caphetamgiao.local/api/
+NEXT_PUBLIC_PROTOCOL=https
+NEXT_PUBLIC_URL=https://tamgiaocoffee.com/
+NEXT_PUBLIC_API_URL=https://tamgiaocoffee.com/api/
 NEXT_PUBLIC_API_KEY=@1256Thfhwgiuitghk7656o%$
